# image-processing

./: .gitignore  CMakeLists-EXE.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  get_edges_python.py  image_processor.cc  image_processor.h  main  main-EXE.cc  main-PY.cc
build-exe/: CMakeCache.txt  Makefile  cmake_install.cmake  imageprocessor
build-py/: CMakeCache.txt  Makefile  cmake_install.cmake  get_edges_python.py
